--- a/WebContent/ligne.html
+++ b/WebContent/ligne.html
@@ -80,7 +80,7 @@
 					<span class="hover-text font-light ">AJOUT LIGNE</span></a>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="ligneRecherche.html"><i class="icon icon-search"></i></a></p>
+					<p><a  href="ligneRecherche.jsp"><i class="icon icon-search"></i></a></p>
 					<span class="hover-text font-light ">CHERCHER LIGNE</span></a>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
