--- a/WebContent/ligneAjout.html
+++ b/WebContent/ligneAjout.html
@@ -34,7 +34,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3 class="blank1">Ajout d'une ligne</h3>
 						<div class="tab-content">
 						<div class="tab-pane active" id="horizontal-form">
-							<form class="form-horizontal"  method="post" action="GestionLigne" >
+							<form class="form-horizontal"  method="post" action="LigneAjout" >
 								<div class="form-group">
 									<label for="focusedinput" class="col-sm-2 control-label">Numéro ligne</label>
 									<div class="col-sm-8">
@@ -58,9 +58,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="form-group">
 									<label for="radio" class="col-sm-2 control-label" >Etat</label>
 									<div class="col-sm-8">
-										<div class="radio-inline"><label><input name="test1" type="radio" checked="">Opérationnelle</label></div>
-										<div class="radio-inline"><label><input name="test2" type="radio">Résiliée</label></div>
-										<div class="radio-inline"><label><input name="test3" type="radio" disabled=""> En cours de résiliation</label></div>
+										<div class="radio-inline"><label><input name="etat" type="radio" checked="" value="1">Opérationnelle</label></div>
+										<div class="radio-inline"><label><input name="etat" type="radio" value="2">Résiliée</label></div>
+<!-- 										<div class="radio-inline"><label><input name="test" type="radio" disabled="" value=""> En cours de résiliation</label></div> -->
 										
 									</div>
 								</div>
