--- a/WebContent/ligneImport.html
+++ b/WebContent/ligneImport.html
@@ -43,17 +43,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
 	</div>
 						<div class="bs-example" data-example-id="form-validation-states-with-icons">
-						<form>
+						<form method="post" action="LigneImport">
 						  
 						  <div class="form-group">
 							<label for="exampleInputFile">File input</label>
-							<input type="file" id="exampleInputFile">
+							<input type="file" id="exampleInputFile" name="file">
 							<p class="help-block">Example block-level help text here.</p>
 						  </div>
 						  <div class="panel-footer">
 							<div class="row">
 								<div class="col-sm-8 col-sm-offset-2">
-									<button class="btn-success btn">Submit</button>
+									<button class="btn-success btn" type="submit" >Submit</button>
 									<button class="btn-default btn">Cancel</button>
 								</div>
 							</div>
@@ -62,7 +62,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  </div>
 				</div>
 			</div>
-		</div>
 	</section>
 	
 
