--- a/WebContent/forms.html
+++ b/WebContent/forms.html
@@ -7,32 +7,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Easy Admin Panel an Admin Panel Category Flat Bootstrap Responsive Website Template | Forms :: w3layouts</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Easy Admin Panel Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
- <!-- Bootstrap Core CSS -->
-<link href="css/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
-<!-- Custom CSS -->
-<link href="css/css/style.css" rel='stylesheet' type='text/css' />
- 
-
-
+	<title>Easy Admin Panel an Admin Panel Category Flat Bootstrap Responsive Website Template | Forms :: w3layouts</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Easy Admin Panel Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+		Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+	 <!-- Bootstrap Core CSS -->
+	<link href="css/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
+	<!-- Custom CSS -->
+	<link href="css/css/style.css" rel='stylesheet' type='text/css' />
 	<script>
 		 new WOW().init();
 	</script>
-
 </head> 
-   
- <body class="sticky-header left-side-collapsed"  onload="initMap()">
+
+<body class="sticky-header left-side-collapsed"  onload="initMap()">
     <section>
-    
-			<div id="page-wrapper">
-				<div class="graphs">
-					<h3 class="blank1">Basic Forms</h3>
-						<div class="tab-content">
+		<div id="page-wrapper">
+			<div class="graphs">
+				<h3 class="blank1">Basic Forms</h3>
+					<div class="tab-content">
 						<div class="tab-pane active" id="horizontal-form">
 							<form class="form-horizontal">
 								<div class="form-group">
@@ -138,67 +133,68 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</form>
 						</div>
 					</div>
-					
 					<div class="bs-example" data-example-id="form-validation-states">
-    <form>
-      <div class="form-group has-success">
-        <label class="control-label" for="inputSuccess1">Input with success</label>
-        <input type="text" class="form-control1" id="inputSuccess1">
-      </div>
-      <div class="form-group has-warning">
-        <label class="control-label" for="inputWarning1">Input with warning</label>
-        <input type="text" class="form-control1" id="inputWarning1">
-      </div>
-      <div class="form-group has-error">
-        <label class="control-label" for="inputError1">Input with error</label>
-        <input type="text" class="form-control1" id="inputError1">
-      </div>
-    </form>
-  </div>
-  <div class="panel-body panel-body-inputin">
-		<form role="form" class="form-horizontal">
-			<div class="form-group">
-				<label class="col-md-2 control-label">Email Address</label>
-				<div class="col-md-8">
-					<div class="input-group in-grp1">							
-						<span class="input-group-addon">
-							<i class="fa fa-envelope-o"></i>
-						</span>
-						<input type="text" class="form-control1" placeholder="Email Address">
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label">Password</label>
-				<div class="col-md-8">
-					<div class="input-group in-grp1">
-						<span class="input-group-addon">
-							<i class="fa fa-key"></i>
-						</span>
-						<input type="password" class="form-control1" id="exampleInputPassword1" placeholder="Password">
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label">Email Address</label>
-				<div class="col-md-8">
-					<div class="input-group input-icon right in-grp1">
-						<span class="input-group-addon">
-							<i class="fa fa-envelope-o"></i>
-						</span>
-						<input id="email" class="form-control1" type="text" placeholder="Email Address">
-					</div>
-				</div>
-				<div class="col-sm-2 jlkdfj1">
-					<p class="help-block">With tooltip</p>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="form-group">
-				<label class="col-md-2 control-label">Password</label>
-				<div class="col-md-8">
+    					<form>
+      						<div class="form-group has-success">
+        						<label class="control-label" for="inputSuccess1">Input with success</label>
+        						<input type="text" class="form-control1" id="inputSuccess1">
+      						</div>
+      						<div class="form-group has-warning">
+        						<label class="control-label" for="inputWarning1">Input with warning</label>
+        						<input type="text" class="form-control1" id="inputWarning1">
+      						</div>
+      						<div class="form-group has-error">
+       		 					<label class="control-label" for="inputError1">Input with error</label>
+        						<input type="text" class="form-control1" id="inputError1">
+      						</div>
+    					</form>
+  					</div>
+ 	 				<div class="panel-body panel-body-inputin">
+						<form role="form" class="form-horizontal">
+							<div class="form-group">
+								<label class="col-md-2 control-label">Email Address</label>
+								<div class="col-md-8">
+									<div class="input-group in-grp1">							
+										<span class="input-group-addon">
+											<i class="fa fa-envelope-o"></i>
+										</span>
+										<input type="text" class="form-control1" placeholder="Email Address">
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+							<div class="form-group">
+								<label class="col-md-2 control-label">Password</label>
+								<div class="col-md-8">
+									<div class="input-group in-grp1">
+										<span class="input-group-addon">
+											<i class="fa fa-key"></i>
+										</span>
+										<input type="password" class="form-control1" id="exampleInputPassword1" placeholder="Password">
+									</div>
+								</div>
+							<div class="clearfix">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-2 control-label">Email Address</label>
+							<div class="col-md-8">
+								<div class="input-group input-icon right in-grp1">
+									<span class="input-group-addon">
+										<i class="fa fa-envelope-o"></i>
+									</span>
+									<input id="email" class="form-control1" type="text" placeholder="Email Address">
+								</div>
+							</div>
+							<div class="col-sm-2 jlkdfj1">
+								<p class="help-block">With tooltip</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-md-2 control-label">Password</label>
+							<div class="col-md-8">
 					<div class="input-group input-icon right in-grp1">
 						<span class="input-group-addon">
 							<i class="fa fa-key"></i>
