--- a/WebContent/ligne.html
+++ b/WebContent/ligne.html
@@ -16,117 +16,68 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
 	
 	
-	
-	
-		
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">	
 </head>
-
 <body>
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
 		<div class="container">
-		
-			<!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			
-			
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
-					<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#" title="Next Section"><span class="icon icon-phone"></span> <span class="text">sdfsdfsdfsdf</span></a></li>
-					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-phone"></span> <span class="text">LIGNES</span></a></li>
-					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-user"></span> <span class="text">PORTEURS</span></a></li>
-					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="Next Section"><span class="icon icon-gears"></span> <span class="text">RAPPROCHEMENT</span></a></li>
-					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Next Section"><span class="icon icon-leaf"></span> <span class="text">Statistiques</span></a></li>
-					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"></span> <span class="text">Extraction</span></a></li>
+					<li data-slide="1" class="col-12 col-sm-2"><a  href="accueil.html" title="Next Section"><span class="icon icon-home" style="color: "></span> <span class="text" style="color:  ;">ACCUEIL</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="ligne.html" title="Next Section"><span class="icon icon-phone" style="color: brown"></span> <span class="text" style="color: brown">LIGNES</span></a></li>
+					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="porteur.html" title="Next Section"><span class="icon icon-user" style="color: "></span> <span class="text" style="color: ">PORTEURS</span></a></li>
+					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="rapprochement.html" title="Next Section"><span class="icon icon-gears" style="color: "></span> <span class="text" style="color: ">RAPPROCHEMENT</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="facture.html" title="Next Section"><span class="icon icon-leaf" style="color: "></span> <span class="text" style="color: ">FACTURE</span></a></li>
+					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li>
 				</ul>
-				<div class="row">
-					<div class="col-sm-2 active-menu"></div>
-				</div>
+<!-- 				<div class="row"> -->
+<!-- 					<div class="col-sm-2 active-menu"></div> -->
+<!-- 				</div> -->
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
 	</div><!-- /.navbar -->
 	
-	
-
-	
-	
 	<!-- === MAIN Background === -->
 	<div class="slide story" id="slide-1" data-slide="1">
-		
-		
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
 					<h1 class="font-semibold"><span class="font-thin">&nbsp;</span></h1>
 					<h4 class="font-thin"><span class="font-semibold"></span></h4>
 					<h4 class="font-thin"><span class="font-semibold">RAPPROCHEMENT DES FACTURES</span></h4>
-					
 				</div><!-- /col-12 -->
 			</div><!-- /row -->
-			
 		</div><!-- /container -->
-		
-		
-		
 		
 		<div class="container">
 			<div id="contact-row-4" class="row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a href="ligneAjout.html"><i class="icon icon-plus"></i></a></p>
-					<span class="hover-text font-light ">AJOUT LIGNE</span></a>
+					<span class="hover-text font-light ">AJOUT LIGNE</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="ligneRecherche.jsp"><i class="icon icon-search"></i></a></p>
-					<span class="hover-text font-light ">CHERCHER LIGNE</span></a>
+					<span class="hover-text font-light ">CHERCHER LIGNE</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="ligneImport.html"><i class="icon icon-upload-alt"></i></a></p>
-					<span class="hover-text font-light ">IMPORTER LIGNES<br></span></a>
+					<span class="hover-text font-light ">IMPORTER LIGNES<br></span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="#"><i class="icon icon-download-lt"></i></a></p>
-					<span class="hover-text font-light "></span></a>
+					<span class="hover-text font-light "></span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="#"><i class="icon icon-fil"></i></a></p>
-					<span class="hover-text font-light "></span></a>
+					<span class="hover-text font-light "></span>
 				</div><!-- /col12 -->
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 		
-		
-		
-		<div class="container">
-			<div id="contact-row-4" class="row">
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a href="accueil.html"><i class="icon icon-home"></i></a></p>
-					<span class="hover-text font-light ">ACCUEIL</span></a>
-				</div><!-- /col12 -->
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="index.html"><i class="icon icon-signout"></i></a></p>
-					<span class="hover-text font-light ">SE DECONNECTER</span></a>
-				</div><!-- /col12 -->
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="rapprochement.html"><i class="icon icon-gearss"></i></a></p>
-					<span class="hover-text font-light "><br></span></a>
-				</div><!-- /col12 -->
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="facture.html"><i class="icon icon-tickset"></i></a></p>
-					<span class="hover-text font-light "></span></a>
-				</div><!-- /col12 -->
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="#"><i class="icon icon-aze"></i></a></p>
-					<span class="hover-text font-light "></span></a>
-				</div><!-- /col12 -->
-				<div class="col-sm-1 hidden-sm">&nbsp;</div>
-			</div><!-- /row -->
-		</div><!-- /container -->
 		
 		
 		
@@ -140,13 +91,13 @@
 </body>
 
 	<!-- SCRIPTS -->
-	<script src="js/html5shiv.js"></script>
-	<script src="js/jquery-1.10.2.min.js"></script>
-	<script src="js/jquery-migrate-1.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
-	<script src="js/script.js"></script>
+<script src="js/html5shiv.js"></script>
+<script src="js/jquery-1.10.2.min.js"></script>
+<script src="js/jquery-migrate-1.2.1.min.js"></script>
+<!-- <script src="js/bootstrap.min.js"></script> -->
+<script src="js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
+<script src="js/script.js"></script>
 	
 	<!-- fancybox init -->
 	<script>
