--- a/WebContent/ligneImport.html
+++ b/WebContent/ligneImport.html
@@ -17,17 +17,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
 <!-- Custom CSS -->
 <link href="css/css/style.css" rel='stylesheet' type='text/css' />
- 
-
-
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/style.css">	
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">	
 	<script>
 		 new WOW().init();
 	</script>
-
 </head> 
-   
- <body class="sticky-header left-side-collapsed"  onload="initMap()">
-    <section>
+<body class="sticky-header left-side-collapsed"  onload="initMap()">
+	<div class="navbar navbar-fixed-top" data-activeslide="1">
+		<div class="container">
+			<div class="nav-collapse collapse navbar-responsive-collapse">
+				<ul class="nav row">
+					<li data-slide="1" class="col-12 col-sm-2"><a  href="accueil.html" title="Next Section"><span class="icon icon-home" style="color: "></span> <span class="text" style="color:  ;">ACCUEIL</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="ligne.html" title="Next Section"><span class="icon icon-phone" style="color: brown"></span> <span class="text" style="color: brown">LIGNES</span></a></li>
+					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="porteur.html" title="Next Section"><span class="icon icon-user" style="color: "></span> <span class="text" style="color: ">PORTEURS</span></a></li>
+					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="rapprochement.html" title="Next Section"><span class="icon icon-gears" style="color: "></span> <span class="text" style="color: ">RAPPROCHEMENT</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="facture.html" title="Next Section"><span class="icon icon-leaf" style="color: "></span> <span class="text" style="color: ">FACTURE</span></a></li>
+					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li>
+				</ul>
+			</div><!-- /.nav-collapse -->
+		</div><!-- /.container -->
+	</div><!-- /.navbar -->
+	<div class="slide story"  data-slide="1">
+	</div>
+		
+
+	<div class="container">
     
 			<div id="page-wrapper">
 				<div class="graphs">
@@ -46,24 +65,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<form method="post" action="LigneImport">
 						  
 						  <div class="form-group">
-							<label for="exampleInputFile">File input</label>
+							<label for="exampleInputFile" style="color: white">File input</label>
 							<input type="file" id="exampleInputFile" name="file">
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block" style="color: white">Example block-level help text here.</p>
 						  </div>
-						  <div class="panel-footer">
+<!-- 						  <div class="panel-footer" > -->
 							<div class="row">
 								<div class="col-sm-8 col-sm-offset-2">
 									<button class="btn-success btn" type="submit" >Submit</button>
 									<button class="btn-default btn">Cancel</button>
 								</div>
 							</div>
-						 </div>
+<!-- 						 </div> -->
 						</form>
 					  </div>
 				</div>
 			</div>
-	</section>
+	</div>
 	
 
 </body>
+
+<!-- SCRIPTS -->
+<script src="js/html5shiv.js"></script>
+<script src="js/jquery-1.10.2.min.js"></script>
+<script src="js/jquery-migrate-1.2.1.min.js"></script>
+<!-- <script src="js/bootstrap.min.js"></script> -->
+<script src="js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
+<script src="js/script.js"></script>
+
 </html>
