--- a/WebContent/ligne.html
+++ b/WebContent/ligne.html
@@ -55,7 +55,7 @@
 			<div id="contact-row-4" class="row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a href="ligneAjout.html"><i class="icon icon-plus"></i></a></p>
+					<p><a href="ligneAjout.jsp"><i class="icon icon-plus"></i></a></p>
 					<span class="hover-text font-light ">AJOUT LIGNE</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
