--- a/WebContent/accueil.html
+++ b/WebContent/accueil.html
@@ -18,10 +18,10 @@
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a  href="accueil.html" title="Next Section"><span class="icon icon-home" style="color: brown"></span> <span class="text" style="color: brown ;">ACCUEIL</span></a></li>
-					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="localite.html" title="Next Section"><span class="icon icon-phone" style="color: "></span> <span class="text" style="color: ">LOCALITES</span></a></li>
 					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="ligne.html" title="Next Section"><span class="icon icon-user" style="color: "></span> <span class="text" style="color: ">LIGNES</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="localite.html" title="Next Section"><span class="icon icon-phone" style="color: "></span> <span class="text" style="color: ">LOCALITES</span></a></li>
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="rapprochement.html" title="Next Section"><span class="icon icon-gears" style="color: "></span> <span class="text" style="color: ">RAPPROCHEMENT</span></a></li>
-<!-- 					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="facture.html" title="Next Section"><span class="icon icon-ticket" style="color: "></span> <span class="text" style="color: ">FACTURE</span></a></li> -->
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="paraetrage.html" title="Next Section"><span class="icon icon-ticket" style="color: "></span> <span class="text" style="color: ">PARAMETRAGE</span></a></li>
 <!-- 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li> -->
 				</ul>
 <!-- 				<div class="row"> -->
@@ -50,13 +50,14 @@
 					<span class="hover-text font-light "></span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="localite.html"><i class="icon icon-home"></i></a></p>
-					<span class="hover-text font-light ">LOCALITE</span>
-				</div><!-- /col12 -->
-				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="ligne.html"><i class="icon icon-phone"></i></a></p>
 					<span class="hover-text font-light ">LIGNES<br></span>
 				</div><!-- /col12 -->
+				<div class="col-12 col-sm-2 with-hover-text">
+					<p><a  href="localite.html"><i class="icon icon-home"></i></a></p>
+					<span class="hover-text font-light ">LOCALITE</span>
+				</div><!-- /col12 -->
+				
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="rapprochement.html"><i class="icon icon-gears"></i></a></p>
 					<span class="hover-text font-light ">RAPPROCHEMENT</span>
