--- a/WebContent/ligne.html
+++ b/WebContent/ligne.html
@@ -26,11 +26,11 @@
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a  href="accueil.html" title="Next Section"><span class="icon icon-home" style="color: "></span> <span class="text" style="color:  ;">ACCUEIL</span></a></li>
-					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="ligne.html" title="Next Section"><span class="icon icon-phone" style="color: brown"></span> <span class="text" style="color: brown">LIGNES</span></a></li>
-					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="porteur.html" title="Next Section"><span class="icon icon-user" style="color: "></span> <span class="text" style="color: ">PORTEURS</span></a></li>
+					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="ligne.html" title="Next Section"><span class="icon icon-user" style="color: brown"></span> <span class="text" style="color: brown">LIGNES</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="localite.html" title="Next Section"><span class="icon icon-phone" style="color: "></span> <span class="text" style="color: ">LOCALITES</span></a></li>
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="rapprochement.html" title="Next Section"><span class="icon icon-gears" style="color: "></span> <span class="text" style="color: ">RAPPROCHEMENT</span></a></li>
-					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="facture.html" title="Next Section"><span class="icon icon-leaf" style="color: "></span> <span class="text" style="color: ">FACTURE</span></a></li>
-					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="paraetrage.html" title="Next Section"><span class="icon icon-ticket" style="color: "></span> <span class="text" style="color: ">PARAMETRAGE</span></a></li>
+<!-- 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li> -->
 				</ul>
 <!-- 				<div class="row"> -->
 <!-- 					<div class="col-sm-2 active-menu"></div> -->
@@ -55,6 +55,10 @@
 			<div id="contact-row-4" class="row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 col-sm-2 with-hover-text">
+					<p><a  href="ligneImport.html"><i class="icon icon-upload-altaa"></i></a></p>
+					<span class="hover-text font-light "><br></span>
+				</div><!-- /col12 -->
+				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a href="ligneAjout.jsp"><i class="icon icon-plus"></i></a></p>
 					<span class="hover-text font-light ">AJOUT LIGNE</span>
 				</div><!-- /col12 -->
@@ -62,10 +66,7 @@
 					<p><a  href="ligneRecherche.jsp"><i class="icon icon-search"></i></a></p>
 					<span class="hover-text font-light ">CHERCHER LIGNE</span>
 				</div><!-- /col12 -->
-				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="ligneImport.html"><i class="icon icon-upload-alt"></i></a></p>
-					<span class="hover-text font-light ">IMPORTER LIGNES<br></span>
-				</div><!-- /col12 -->
+				
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a  href="#"><i class="icon icon-download-lt"></i></a></p>
 					<span class="hover-text font-light "></span>
