--- a/WebContent/accueil.html
+++ b/WebContent/accueil.html
@@ -21,7 +21,7 @@
 					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="ligne.html" title="Next Section"><span class="icon icon-user" style="color: "></span> <span class="text" style="color: ">LIGNES</span></a></li>
 					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="localite.html" title="Next Section"><span class="icon icon-phone" style="color: "></span> <span class="text" style="color: ">LOCALITES</span></a></li>
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="rapprochement.html" title="Next Section"><span class="icon icon-gears" style="color: "></span> <span class="text" style="color: ">RAPPROCHEMENT</span></a></li>
-					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="paraetrage.html" title="Next Section"><span class="icon icon-ticket" style="color: "></span> <span class="text" style="color: ">PARAMETRAGE</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="parametrage.html" title="Next Section"><span class="icon icon-ticket" style="color: "></span> <span class="text" style="color: ">PARAMETRAGE</span></a></li>
 <!-- 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li> -->
 				</ul>
 <!-- 				<div class="row"> -->
@@ -83,21 +83,4 @@
 <script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 <script src="js/script.js"></script>
 
-<!-- fancybox init -->
-<!-- <script> -->
-<!-- 	$(document).ready(function(e) { -->
-<!-- 		var lis = $('.nav > li'); -->
-<!-- 		menu_focus( lis[0], 1 ); -->
-		
-<!-- 		$(".fancybox").fancybox({ -->
-<!-- 			padding: 10, -->
-<!-- 			helpers: { -->
-<!-- 				overlay: { -->
-<!-- 					locked: false -->
-<!-- 				} -->
-<!-- 			} -->
-<!-- 		}); -->
-	
-<!-- 	}); -->
-<!-- 	</script> -->
 </html>
