--- a/WebContent/parametrage.html
+++ b/WebContent/parametrage.html
@@ -27,9 +27,9 @@
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a  href="accueil.html" title="Next Section"><span class="icon icon-home" style="color: "></span> <span class="text" style="color:  ;">ACCUEIL</span></a></li>
 					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="ligne.html" title="Next Section"><span class="icon icon-user" style="color: "></span> <span class="text" style="color: ">LIGNES</span></a></li>
-					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="localite.html" title="Next Section"><span class="icon icon-phone" style="color: brown"></span> <span class="text" style="color: brown">LOCALITES</span></a></li>
+					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="localite.html" title="Next Section"><span class="icon icon-phone" style="color: "></span> <span class="text" style="color: ">LOCALITES</span></a></li>
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="rapprochement.html" title="Next Section"><span class="icon icon-gears" style="color: "></span> <span class="text" style="color: ">RAPPROCHEMENT</span></a></li>
-					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="parametrage.html" title="Next Section"><span class="icon icon-ticket" style="color: "></span> <span class="text" style="color: ">PARAMETRAGE</span></a></li>
+					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="parametrage.html" title="Next Section"><span class="icon icon-ticket" style="color: brown"></span> <span class="text" style="color: brown">PARAMETRAGE</span></a></li>
 <!-- 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-file"style="color: " ></span> <span class="text" style="color: ">Extraction</span></a></li> -->
 				</ul>
 <!-- 				<div class="row"> -->
@@ -59,12 +59,16 @@
 					<span class="hover-text font-light "><br></span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a href="localiteAjout.html"><i class="icon icon-plus"></i></a></p>
-					<span class="hover-text font-light ">AJOUT LOCALITE</span>
+					<p><a href="aaajoutTypeForfait.jsp"><i class="icon icon-plus"></i></a></p>
+					<span class="hover-text font-light ">AJOUT TYPE/FORFAIT</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
-					<p><a  href="localiteRecherche.jsp"><i class="icon icon-search"></i></a></p>
-					<span class="hover-text font-light ">CHERCHER LOCALITE</span>
+					<p><a href="aaliaisonTypeForfait.jsp"><i class="icon icon-edit"></i></a></p>
+					<span class="hover-text font-light ">LIAISON TYPE/FORFAIT</span>
+				</div><!-- /col12 -->
+				<div class="col-12 col-sm-2 with-hover-text">
+					<p><a  href="aamajPrix.jsp"><i class="icon icon-ticket"></i></a></p>
+					<span class="hover-text font-light ">MAJ PRIX</span>
 				</div><!-- /col12 -->
 				
 				<div class="col-12 col-sm-2 with-hover-text">
